@startuml ERD
hide circle
skinparam linetype ortho
title Evently ER Diagram

entity User {
  * id : bigint PK
  --
  email : varchar unique
  name : varchar
  role : enum(Role)
  password_hash : varchar
  created_at : timestamp
}

entity Event {
  * id : bigint PK
  name : varchar
  venue : varchar
  starts_at : timestamp
  capacity : int
  booked_count : int
  version : int (optimistic lock)
}

entity Seat {
  * id : bigint PK
  event_id : fk -> Event.id
  label : varchar (unique per event)
  status : enum(AVAILABLE,BOOKED)
}

entity Booking {
  * id : bigint PK
  user_id : fk -> User.id
  event_id : fk -> Event.id
  seat_id : fk -> Seat.id (nullable)
  status : enum(CONFIRMED,CANCELED)
  created_at : timestamp
  updated_at : timestamp
  -- unique(user_id,event_id,seat_id)
}

entity Waitlist {
  * id : bigint PK
  user_id : fk -> User.id
  event_id : fk -> Event.id
  position : int
  created_at : timestamp
  -- unique(user_id,event_id)
}

User ||--o{ Booking
Event ||--o{ Booking
Event ||--o{ Seat
Event ||--o{ Waitlist
User ||--o{ Waitlist
Seat |o--o{ Booking

@enduml
